--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <main class="main">
-
+<img src="assets/images/image-omelette.jpeg" alt="An omelette image" class="image" width="650px" height="260px">
 
     <h1>Simple Omelette Recipe</h1>
 
