--- a/index.html
+++ b/index.html
@@ -12,20 +12,28 @@
 
 <body>
   <main class="main">
+    <article>
 <img src="assets/images/image-omelette.jpeg" alt="An omelette image" class="image" width="650px" height="260px">
-
     <h1>Simple Omelette Recipe</h1>
+    <p class="description"> An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+  to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
-      An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+</article>
 
-  Preparation time
+<article class="preparation-container">
+  <h3 class="preparation-title">Preparation time</h3>
+<p >
+  <ul class="preparation-list">
+    <li> &nbsp;&nbsp;<strong>Total:</strong> Approximately 10 minutes</li>
+   &nbsp;<li> &nbsp;&nbsp; <strong>Preparation:</strong> 5 minutes</li>
+   &nbsp;<li> &nbsp;&nbsp; <strong>Cooking:</strong> 5 minutes</li>
+  </ul>
+</p>
+</article>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+<article class="ingredients">
 
-  Ingredients
+ <h2>Ingredients</h2>
 
   2-3 large eggs
   Salt, to taste
