Refactor index.html and main.css: Update preparation time list to use span for bold text, adjust h1 and h2 styles for improved typography, and clean up CSS formatting for consistency.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <h3 class="preparation-title">Preparation time</h3>
 <p >
   <ul class="preparation-list">
-    <li> &nbsp;&nbsp;&nbsp;<strong>Total:</strong> Approximately 10 minutes</li>
-   &nbsp;<li> &nbsp;&nbsp;&nbsp; <strong>Preparation:</strong> 5 minutes</li>
-   &nbsp;<li> &nbsp;&nbsp;&nbsp; <strong>Cooking:</strong> 5 minutes</li>
+    <li> &nbsp;&nbsp;&nbsp;<span class="bold">Total:</span> Approximately 10 minutes</li>
+   &nbsp;<li> &nbsp;&nbsp;&nbsp; <span class="bold">Preparation:</span> 5 minutes</li>
+   &nbsp;<li> &nbsp;&nbsp;&nbsp; <span class="bold">Cooking:</span> 5 minutes</li>
   </ul>
 </p>
 </article>
