--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
 </article>
 
 <article class="ingredients">
-
  <h2>Ingredients</h2>
-
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
-
+<p>
+  <ul class="ingredients-list">
+   <li>2-3 large eggs</li>
+   <li>Salt, to taste</li>
+   <li>Pepper, to taste</li>
+   <li>1 tablespoon of butter or oil</li>
+   <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+  </ul>
+</p>
+</article>
   Instructions
 
   Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
