Enhance index.html by adding structured article sections for ingredients and instructions, including improved formatting for the ingredients list. Update main.css to style new sections and adjust h2 margins for better spacing.

--- a/index.html
+++ b/index.html
@@ -32,19 +32,23 @@
 </article>
 
 <article class="ingredients">
- <h2>Ingredients</h2>
+ <h2 class="ingredients-title">Ingredients</h2>
 <p>
   <ul class="ingredients-list">
-   <li>2-3 large eggs</li>
-   <li>Salt, to taste</li>
-   <li>Pepper, to taste</li>
-   <li>1 tablespoon of butter or oil</li>
-   <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+   <li>&nbsp;&nbsp;&nbsp;2-3 large eggs</li><br>
+   <li>&nbsp;&nbsp;&nbsp;Salt, to taste</li><br>
+   <li>&nbsp;&nbsp;&nbsp;Pepper, to taste</li><br>
+   <li>&nbsp;&nbsp;&nbsp;1 tablespoon of butter or oil</li><br>
+   <li>&nbsp;&nbsp;&nbsp;Optional fillings: cheese, diced vegetables, cooked meats, herbs</li><br>
   </ul>
 </p>
 </article>
-  Instructions
+<hr>  
 
+<article class="instructions">
+  <h2 class="instructions-title">Instructions</h2>
+
+  <p class="instructions-text">
   Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
   You can add a tablespoon of water or milk for a fluffier texture.
 
@@ -60,6 +64,7 @@
   fillings. Let it cook for another minute, then slide it onto a plate.
 
   Enjoy: Serve hot, with additional salt and pepper if needed.
+</article>
 
   Nutrition
 
