--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
 
   <p class="instructions-text">
     <ol class="instructions-list">
-  <li>&nbsp;&nbsp;&nbsp; Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+  <li>&nbsp;&nbsp;&nbsp; <span class="bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
   You can add a tablespoon of water or milk for a fluffier texture.</li>
 <br>
-  <li>&nbsp;&nbsp;&nbsp; Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+  <li>&nbsp;&nbsp;&nbsp; <span class="bold">Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</li>
 <br>
-  <li>&nbsp;&nbsp;&nbsp; Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+  <li>&nbsp;&nbsp;&nbsp; <span class="bold">Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
   the eggs evenly coat the surface.</li>
 <br>
-  <li>&nbsp;&nbsp;&nbsp; Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
+  <li>&nbsp;&nbsp;&nbsp; <span class="bold">Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in the 
   middle, sprinkle your chosen fillings over one half of the omelette.</li>
 <br>
-  <li>&nbsp;&nbsp;&nbsp; Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
+  <li>&nbsp;&nbsp;&nbsp; <span class="bold">Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the 
   fillings. Let it cook for another minute, then slide it onto a plate.</li>
 <br>
-  <li>&nbsp;&nbsp;&nbsp; Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+  <li>&nbsp;&nbsp;&nbsp; <span class="bold">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</li>
 </ol>
 </p>
 </article>
