--- a/index.html
+++ b/index.html
@@ -47,24 +47,23 @@
 
 <article class="instructions">
   <h2 class="instructions-title">Instructions</h2>
-
-  <p class="instructions-text">
+  <p>
     <ol class="instructions-list">
-  <li>&nbsp;&nbsp;&nbsp; <span class="bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.</li>
+  <li><span class="instructions-text"> <span class="bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
+     You can add a tablespoon of water or milk for a fluffier texture.</span></li>
 <br>
-  <li>&nbsp;&nbsp;&nbsp; <span class="bold">Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+  <li><span class="instructions-text"> <span class="bold">Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</span></li>
 <br>
-  <li>&nbsp;&nbsp;&nbsp; <span class="bold">Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.</li>
+  <li><span class="instructions-text"> <span class="bold">Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+  the eggs evenly coat the surface.</span></li>
 <br>
-  <li>&nbsp;&nbsp;&nbsp; <span class="bold">Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.</li>
+  <li><span class="instructions-text"> <span class="bold">Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in the
+  middle, sprinkle your chosen fillings over one half of the omelette.</span></li>
 <br>
-  <li>&nbsp;&nbsp;&nbsp; <span class="bold">Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.</li>
+  <li><span class="instructions-text"> <span class="bold">Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the 
+  fillings. Let it cook for another minute, then slide it onto a plate.</span></li>
 <br>
-  <li>&nbsp;&nbsp;&nbsp; <span class="bold">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</li>
+  <li><span class="instructions-text"> <span class="bold">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</span></li>
 </ol>
 </p>
 </article>
