--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <article class="instructions">
   <h2 class="instructions-title">Instructions</h2>
-  <p>
+  <p class="instructions-p">
     <ol class="instructions-list">
   <li><span class="instructions-text"> <span class="bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
      You can add a tablespoon of water or milk for a fluffier texture.</span></li>
