Refactor index.html and main.css: Enhance nutrition section by adding structured list for nutritional values, improve styling with new classes, and adjust CSS for better layout and readability.

--- a/index.html
+++ b/index.html
@@ -68,22 +68,37 @@
 </p>
 </article>
 
-  Nutrition
+<hr>
 
-  The table below shows nutritional values per serving without the additional fillings.
+<article>
+  <h2>Nutrition</h2>
 
-  Calories
-  277kcal
+ <p class="nutrition-p">The table below shows nutritional values per serving without the additional fillings.</p>
 
-  Carbs
-  0g
+  <ul class="nutrition-list">
+    <li class="nutrition-list-row">
+      <div class="nutrition-item">Calories</div>
+      <div class="nutrition-item nutrition-value">277kcal</div>
+    </li>
 
-  Protein
-  20g
+    <li class="nutrition-list-row">
+      <div class="nutrition-item">Calories</div>
+      <div class="nutrition-item nutrition-value">277kcal</div>
+    </li>
 
-  Fat
-  22g
- 
+    <li class="nutrition-list-row">
+      <div class="nutrition-item">Calories</div>
+      <div class="nutrition-item nutrition-value">277kcal</div>
+    </li>
+
+    <li class="nutrition-list-row">
+      <div class="nutrition-item">Calories</div>
+      <div class="nutrition-item nutrition-value">277kcal</div>
+    </li>
+
+  </ul>
+
+</article>
 
   </main>
 
