Refactor index.html and main.css: Update nutrition section by replacing repeated calorie entries with distinct nutritional values (Carbs, Protein, Fat) and add horizontal rules for better separation. Adjust CSS for nutrition list margin to enhance layout consistency.

--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
       <div class="nutrition-item">Calories</div>
       <div class="nutrition-item nutrition-value">277kcal</div>
     </li>
-
+<hr>
     <li class="nutrition-list-row">
-      <div class="nutrition-item">Calories</div>
+      <div class="nutrition-item">Carbs</div>
       <div class="nutrition-item nutrition-value">277kcal</div>
     </li>
-
+<hr>
     <li class="nutrition-list-row">
-      <div class="nutrition-item">Calories</div>
+      <div class="nutrition-item">Protein</div>
       <div class="nutrition-item nutrition-value">277kcal</div>
     </li>
-
+<hr>
     <li class="nutrition-list-row">
-      <div class="nutrition-item">Calories</div>
+      <div class="nutrition-item">Fat</div>
       <div class="nutrition-item nutrition-value">277kcal</div>
     </li>
 
