Refactor index.html and main.css: Update nutrition section to display accurate nutritional values (Carbs, Protein, Fat) and enhance visual separation with new horizontal rule class. Adjust CSS for hr element background color and improve layout consistency in nutrition list.

--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
       <div class="nutrition-item">Calories</div>
       <div class="nutrition-item nutrition-value">277kcal</div>
     </li>
-<hr>
+<hr class="nutrition-hr">
     <li class="nutrition-list-row">
       <div class="nutrition-item">Carbs</div>
-      <div class="nutrition-item nutrition-value">277kcal</div>
+      <div class="nutrition-item nutrition-value">0g</div>
     </li>
-<hr>
+<hr class="nutrition-hr">
     <li class="nutrition-list-row">
       <div class="nutrition-item">Protein</div>
-      <div class="nutrition-item nutrition-value">277kcal</div>
+      <div class="nutrition-item nutrition-value">20g</div>
     </li>
-<hr>
+<hr class="nutrition-hr">
     <li class="nutrition-list-row">
       <div class="nutrition-item">Fat</div>
-      <div class="nutrition-item nutrition-value">277kcal</div>
+      <div class="nutrition-item nutrition-value">22g</div>
     </li>
 
   </ul>
