Refactor index.html and main.css: Remove extra whitespace from ingredients list and adjust CSS styling for list elements

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
  <h2 class="ingredients-title">Ingredients</h2>
 <p>
   <ul class="ingredients-list">
-   <li>&nbsp;&nbsp;&nbsp;2-3 large eggs</li><br>
-   <li>&nbsp;&nbsp;&nbsp;Salt, to taste</li><br>
-   <li>&nbsp;&nbsp;&nbsp;Pepper, to taste</li><br>
-   <li>&nbsp;&nbsp;&nbsp;1 tablespoon of butter or oil</li><br>
-   <li>&nbsp;&nbsp;&nbsp;Optional fillings: cheese, diced vegetables, cooked meats, herbs</li><br>
+   <li>2-3 large eggs</li><br>
+   <li>Salt, to taste</li><br>
+   <li>Pepper, to taste</li><br>
+   <li>1 tablespoon of butter or oil</li><br>
+   <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li><br>
   </ul>
 </p>
 </article>
