--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <h3 class="preparation-title">Preparation time</h3>
 <p >
   <ul class="preparation-list">
-    <li> &nbsp;&nbsp;&nbsp;<span class="bold">Total:</span> Approximately 10 minutes</li><br>
-  <li> &nbsp;&nbsp;&nbsp; <span class="bold">Preparation:</span> 5 minutes</li><br>
-  <li> &nbsp;&nbsp;&nbsp; <span class="bold">Cooking:</span> 5 minutes</li>
+    <li><span class="bold">Total:</span> Approximately 10 minutes</li><br>
+  <li> <span class="bold">Preparation:</span> 5 minutes</li><br>
+  <li> <span class="bold">Cooking:</span> 5 minutes</li>
   </ul>
 </p>
 </article>
