--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <main class="main">
-    <article>
+    <article class="image-container">
 <img src="assets/images/image-omelette.jpeg" alt="An omelette image" class="image" width="650px" height="260px">
     <h1>Simple Omelette Recipe</h1>
     <p class="description"> An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
