--- a/index.html
+++ b/index.html
@@ -1,106 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
+    <link rel="stylesheet" href="main.css" />
+    <title>Frontend Mentor | Recipe page</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="main.css">
-  <title>Frontend Mentor | Recipe page</title>
-</head>
+  <body>
+    <main class="main">
+      <article class="image-container">
+        <img src="assets/images/image-omelette.jpeg" alt="An omelette image" class="image" width="650px" height="260px" />
+        <h1>Simple Omelette Recipe</h1>
+        <p class="description">
+          An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your
+          choice of cheese, vegetables, or meats.
+        </p>
+      </article>
+      <div class="margin-content">
+        <article class="preparation-container">
+          <h3 class="preparation-title">Preparation time</h3>
 
+          <ul class="preparation-list">
+            <li><span class="bold">Total:</span> Approximately 10 minutes</li>
+            <br />
+            <li><span class="bold">Preparation:</span> 5 minutes</li>
+            <br />
+            <li><span class="bold">Cooking:</span> 5 minutes</li>
+          </ul>
+        </article>
 
-<body>
-  <main class="main">
-    <article class="image-container">
-<img src="assets/images/image-omelette.jpeg" alt="An omelette image" class="image" width="650px" height="260px">
-    <h1>Simple Omelette Recipe</h1>
-    <p class="description"> An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+        <article class="ingredients">
+          <h2 class="ingredients-title">Ingredients</h2>
 
-</article>
+          <ul class="ingredients-list">
+            <li>2-3 large eggs</li>
+            <br />
+            <li>Salt, to taste</li>
+            <br />
+            <li>Pepper, to taste</li>
+            <br />
+            <li>1 tablespoon of butter or oil</li>
+            <br />
+            <li>Optional fillings:cheese, diced vegetables, cooked meats, herbs</li>
+            <br />
+          </ul>
+          <hr />
+        </article>
 
-<article class="preparation-container">
-  <h3 class="preparation-title">Preparation time</h3>
-<p >
-  <ul class="preparation-list">
-    <li><span class="bold">Total:</span> Approximately 10 minutes</li><br>
-  <li> <span class="bold">Preparation:</span> 5 minutes</li><br>
-  <li> <span class="bold">Cooking:</span> 5 minutes</li>
-  </ul>
-</p>
-</article>
+        <article class="instructions">
+          <h2 class="instructions-title">Instructions</h2>
+          <div class="instructions-p">
+            <ol class="instructions-list">
+              <li>
+                <span class="instructions-text">
+                  <span class="bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can
+                  add a tablespoon of water or milk for a fluffier texture.</span
+                >
+              </li>
+              <br />
+              <li>
+                <span class="instructions-text">
+                  <span class="bold">Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</span
+                >
+              </li>
+              <br />
+              <li>
+                <span class="instructions-text">
+                  <span class="bold">Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the
+                  eggs evenly coat the surface.</span
+                >
+              </li>
+              <br />
+              <li>
+                <span class="instructions-text">
+                  <span class="bold">Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in the
+                  middle, sprinkle your chosen fillings over one half of the omelette.</span
+                >
+              </li>
+              <br />
+              <li>
+                <span class="instructions-text">
+                  <span class="bold">Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the fillings.
+                  Let it cook for another minute, then slide it onto a plate.</span
+                >
+              </li>
+              <br />
+              <li>
+                <span class="instructions-text"> <span class="bold">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</span>
+              </li>
+            </ol>
+          </div>
+          <hr />
+        </article>
 
-<article class="ingredients">
- <h2 class="ingredients-title">Ingredients</h2>
-<p>
-  <ul class="ingredients-list">
-   <li>2-3 large eggs</li><br>
-   <li>Salt, to taste</li><br>
-   <li>Pepper, to taste</li><br>
-   <li>1 tablespoon of butter or oil</li><br>
-   <li>Optional fillings:cheese, diced vegetables, cooked meats, herbs</li><br>
-  </ul>
-</p>
-</article>
-<hr>  
+        <article>
+          <h2>Nutrition</h2>
 
-<article class="instructions">
-  <h2 class="instructions-title">Instructions</h2>
-  <p class="instructions-p">
-    <ol class="instructions-list">
-  <li><span class="instructions-text"> <span class="bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
-     You can add a tablespoon of water or milk for a fluffier texture.</span></li>
-<br>
-  <li><span class="instructions-text"> <span class="bold">Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</span></li>
-<br>
-  <li><span class="instructions-text"> <span class="bold">Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.</span></li>
-<br>
-  <li><span class="instructions-text"> <span class="bold">Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in the
-  middle, sprinkle your chosen fillings over one half of the omelette.</span></li>
-<br>
-  <li><span class="instructions-text"> <span class="bold">Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.</span></li>
-<br>
-  <li><span class="instructions-text"> <span class="bold">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</span></li>
-</ol>
-</p>
-</article>
+          <p class="nutrition-p">The table below shows nutritional values per serving without the additional fillings.</p>
 
-<hr>
-
-<article>
-  <h2>Nutrition</h2>
-
- <p class="nutrition-p">The table below shows nutritional values per serving without the additional fillings.</p>
-
-  <ul class="nutrition-list">
-    <li class="nutrition-list-row">
-      <div class="nutrition-item">Calories</div>
-      <div class="nutrition-item nutrition-value">277kcal</div>
-    </li>
-<hr class="nutrition-hr">
-    <li class="nutrition-list-row">
-      <div class="nutrition-item">Carbs</div>
-      <div class="nutrition-item nutrition-value">0g</div>
-    </li>
-<hr class="nutrition-hr">
-    <li class="nutrition-list-row">
-      <div class="nutrition-item">Protein</div>
-      <div class="nutrition-item nutrition-value">20g</div>
-    </li>
-<hr class="nutrition-hr">
-    <li class="nutrition-list-row">
-      <div class="nutrition-item">Fat</div>
-      <div class="nutrition-item nutrition-value">22g</div>
-    </li>
-
-  </ul>
-
-</article>
-
-  </main>
-
-</body>
+          <ul class="nutrition-list">
+            <li class="nutrition-list-row">
+              <div class="nutrition-item">Calories</div>
+              <div class="nutrition-item nutrition-value">277kcal</div>
+            </li>
+            <hr class="nutrition-hr" />
+            <li class="nutrition-list-row">
+              <div class="nutrition-item">Carbs</div>
+              <div class="nutrition-item nutrition-value">0g</div>
+            </li>
+            <hr class="nutrition-hr" />
+            <li class="nutrition-list-row">
+              <div class="nutrition-item">Protein</div>
+              <div class="nutrition-item nutrition-value">20g</div>
+            </li>
+            <hr class="nutrition-hr" />
+            <li class="nutrition-list-row">
+              <div class="nutrition-item">Fat</div>
+              <div class="nutrition-item nutrition-value">22g</div>
+            </li>
+          </ul>
+        </article>
+      </div>
+    </main>
+  </body>
 </html>
